# GalaxyIncIinations

./: .gitignore  DiscModel.py  FLEXbase.py  Function copy.ipynb  Function.ipynb  ImportingGalaxySampleData.ipynb  LaguerreAmp.py  LowInclinationValidation.ipynb  OriginalSimulatedGalaxyPixelated.ipynb  PaperPlots.ipynb  README.md  SimulatedGalaxiesAndExpansions.ipynb  VaryPositionAngle.ipynb  ananyaflex.py  ananyaflexpy.py  doc1.ipynb  example_galaxy.hdf5  flux_expansion_data_12070-9102.npy  flux_expansion_data_7443-12703.npy  flux_expansion_data_7443-6104.npy  flux_expansion_data_7960-12701.npy  flux_expansion_data_7960-12703.npy  flux_expansion_data_7960-12705.npy  flux_expansion_data_7960-3701.npy  flux_expansion_data_7960-3702.npy  flux_expansion_data_7960-6102.npy  flux_expansion_data_8600-6104.npy  pyproject.toml  testrelation.ipynb
Data/: flux_expansion_data_12070-12701.npy  flux_expansion_data_12070-12704.npy  flux_expansion_data_12070-3701.npy  flux_expansion_data_12070-6103.npy  flux_expansion_data_12070-9102.npy  flux_expansion_data_12071-12701.npy  flux_expansion_data_12071-12704.npy  flux_expansion_data_12071-3702.npy  flux_expansion_data_12071-3704.npy  flux_expansion_data_12071-6102.npy  flux_expansion_data_12073-12703.npy  flux_expansion_data_12073-3704.npy  flux_expansion_data_12074-12703.npy  flux_expansion_data_12074-12704.npy  flux_expansion_data_12074-12705.npy  flux_expansion_data_12074-6104.npy  flux_expansion_data_12074-9101.npy  flux_expansion_data_12074-9102.npy  flux_expansion_data_12075-12703.npy  flux_expansion_data_12075-6101.npy  (+73 more)
(+12 files in other folders)
